fix: compeleting swagger docs
