# app/Domains/Company/Http/Controllers/CompaniesController.php
@@ -5,7 +5,7 @@ namespace App\Domains\Company\Http\Controllers;
 use App\Domains\Company\Http\Requests\StoreCompanyRequest;
 
 use App\Domains\Company\Services\CompanyService;
-use Illuminate\Http\Request;
+use Illuminate\Http\Response;
 use App\Http\Controllers\Controller;
 
 class CompaniesController extends Controller
@@ -26,6 +26,27 @@ class CompaniesController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *      path="/api/insurance-company",
+     *      operationId="getInsuranceCompanyList",
+     *      tags={"Insurance Companies"},
+     *      summary="Get list of Insurance Companies",
+     *      description="Returns list of Insurance Companies",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     *
+     *
      * Display a listing of the resource.
      *
      * @return \Illuminate\Http\Response
@@ -83,6 +104,40 @@ class CompaniesController extends Controller
     }
 
     /**
+     * @OA\Delete(
+     *      path="/api/insurance-company/{companyId}/delete",
+     *      operationId="deleteInsuranceCompany",
+     *      tags={"Insurance Companies"},
+     *      summary="Delete existing Insurance Company",
+     *      description="Deletes a record and returns no content",
+     *      @OA\Parameter(
+     *          name="companyId",
+     *          description="company id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     *
      * Remove the specified resource from storage.
      *
      * @param  int  $id
@@ -90,6 +145,7 @@ class CompaniesController extends Controller
      */
     public function destroy($companyId)
     {
-        return $this->companyService->deleteById($companyId);
+        $this->companyService->deleteById($companyId);
+        return response(null, Response::HTTP_NO_CONTENT);
     }
 }
